[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ficha frente.png" type="Texture" id=1]
[ext_resource path="res://CharacterSheet.gd" type="Script" id=2]

[node name="Character" type="Node2D"]

[node name="CharacterSheet" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="fichaBG" type="TextureRect" parent="CharacterSheet"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 19.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="virarFicha" type="Button" parent="CharacterSheet"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -44.0
margin_top = -68.0
margin_right = -3.0
margin_bottom = -48.0
text = "Virar"

[node name="nodeFor" type="Node" parent="CharacterSheet" groups=["charSheetFront"]]

[node name="for-" type="Button" parent="CharacterSheet/nodeFor"]
margin_left = 32.0
margin_top = 137.0
margin_right = 52.0
margin_bottom = 157.0
rect_scale = Vector2( 0.560001, 0.48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "V"
flat = true

[node name="for+" type="Button" parent="CharacterSheet/nodeFor"]
margin_left = 30.0
margin_top = 95.0
margin_right = 50.0
margin_bottom = 115.0
rect_scale = Vector2( 0.759999, 0.96 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "^"
flat = true

[node name="forLabel" type="Label" parent="CharacterSheet/nodeFor"]
margin_left = 21.0
margin_top = 119.0
margin_right = 61.0
margin_bottom = 133.0
rect_scale = Vector2( 0.814882, 0.807776 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1

[node name="nodeDex" type="Node" parent="CharacterSheet" groups=["charSheetFront"]]

[node name="dex-" type="Button" parent="CharacterSheet/nodeDex"]
margin_left = 79.0
margin_top = 137.0
margin_right = 99.0
margin_bottom = 157.0
rect_scale = Vector2( 0.560001, 0.48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "V"
flat = true

[node name="dex+" type="Button" parent="CharacterSheet/nodeDex"]
margin_left = 77.0
margin_top = 95.0
margin_right = 97.0
margin_bottom = 115.0
rect_scale = Vector2( 0.759999, 0.96 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "^"
flat = true

[node name="dexLabel" type="Label" parent="CharacterSheet/nodeDex"]
margin_left = 68.0
margin_top = 119.0
margin_right = 108.0
margin_bottom = 133.0
rect_scale = Vector2( 0.814882, 0.807776 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1

[node name="nodeCon" type="Node" parent="CharacterSheet" groups=["charSheetFront"]]

[node name="con-" type="Button" parent="CharacterSheet/nodeCon"]
margin_left = 126.0
margin_top = 137.0
margin_right = 146.0
margin_bottom = 157.0
rect_scale = Vector2( 0.560001, 0.48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "V"
flat = true

[node name="con+" type="Button" parent="CharacterSheet/nodeCon"]
margin_left = 124.0
margin_top = 96.0
margin_right = 144.0
margin_bottom = 116.0
rect_scale = Vector2( 0.759999, 0.96 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "^"
flat = true

[node name="conLabel" type="Label" parent="CharacterSheet/nodeCon"]
margin_left = 116.0
margin_top = 119.0
margin_right = 156.0
margin_bottom = 133.0
rect_scale = Vector2( 0.814882, 0.807776 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1

[node name="nodeInt" type="Node" parent="CharacterSheet" groups=["charSheetFront"]]

[node name="int-" type="Button" parent="CharacterSheet/nodeInt"]
margin_left = 174.0
margin_top = 137.0
margin_right = 194.0
margin_bottom = 157.0
rect_scale = Vector2( 0.560001, 0.48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "V"
flat = true

[node name="int+" type="Button" parent="CharacterSheet/nodeInt"]
margin_left = 172.0
margin_top = 95.0
margin_right = 192.0
margin_bottom = 115.0
rect_scale = Vector2( 0.759999, 0.96 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "^"
flat = true

[node name="intLabel" type="Label" parent="CharacterSheet/nodeInt"]
margin_left = 163.0
margin_top = 119.0
margin_right = 203.0
margin_bottom = 133.0
rect_scale = Vector2( 0.814882, 0.807776 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1

[node name="nodeSab" type="Node" parent="CharacterSheet" groups=["charSheetFront"]]

[node name="sab-" type="Button" parent="CharacterSheet/nodeSab"]
margin_left = 221.0
margin_top = 137.0
margin_right = 241.0
margin_bottom = 157.0
rect_scale = Vector2( 0.560001, 0.48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "V"
flat = true

[node name="sab+" type="Button" parent="CharacterSheet/nodeSab"]
margin_left = 220.0
margin_top = 95.0
margin_right = 240.0
margin_bottom = 115.0
rect_scale = Vector2( 0.759999, 0.96 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "^"
flat = true

[node name="sabLabel" type="Label" parent="CharacterSheet/nodeSab"]
margin_left = 210.0
margin_top = 119.0
margin_right = 250.0
margin_bottom = 133.0
rect_scale = Vector2( 0.814882, 0.807776 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1

[node name="nodeCar" type="Node" parent="CharacterSheet" groups=["charSheetFront"]]

[node name="car-" type="Button" parent="CharacterSheet/nodeCar"]
margin_left = 267.0
margin_top = 137.0
margin_right = 287.0
margin_bottom = 157.0
rect_scale = Vector2( 0.560001, 0.48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "V"
flat = true

[node name="car+" type="Button" parent="CharacterSheet/nodeCar"]
margin_left = 266.0
margin_top = 95.0
margin_right = 286.0
margin_bottom = 115.0
rect_scale = Vector2( 0.759999, 0.96 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "^"
flat = true

[node name="carLabel" type="Label" parent="CharacterSheet/nodeCar"]
margin_left = 256.0
margin_top = 119.0
margin_right = 296.0
margin_bottom = 133.0
rect_scale = Vector2( 0.814882, 0.807776 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1

[connection signal="pressed" from="CharacterSheet/virarFicha" to="CharacterSheet" method="virarFicha"]
[connection signal="pressed" from="CharacterSheet/nodeFor/for-" to="CharacterSheet" method="alteraFor" binds= [ false ]]
[connection signal="pressed" from="CharacterSheet/nodeFor/for+" to="CharacterSheet" method="alteraFor" binds= [ true ]]
[connection signal="pressed" from="CharacterSheet/nodeDex/dex-" to="CharacterSheet" method="alteraDex" binds= [ false ]]
[connection signal="pressed" from="CharacterSheet/nodeDex/dex+" to="CharacterSheet" method="alteraDex" binds= [ true ]]
[connection signal="pressed" from="CharacterSheet/nodeCon/con-" to="CharacterSheet" method="alteraCon" binds= [ false ]]
[connection signal="pressed" from="CharacterSheet/nodeCon/con+" to="CharacterSheet" method="alteraCon" binds= [ true ]]
[connection signal="pressed" from="CharacterSheet/nodeInt/int-" to="CharacterSheet" method="alteraInt" binds= [ false ]]
[connection signal="pressed" from="CharacterSheet/nodeInt/int+" to="CharacterSheet" method="alteraInt" binds= [ true ]]
[connection signal="pressed" from="CharacterSheet/nodeSab/sab-" to="CharacterSheet" method="alteraSab" binds= [ false ]]
[connection signal="pressed" from="CharacterSheet/nodeSab/sab+" to="CharacterSheet" method="alteraSab" binds= [ true ]]
[connection signal="pressed" from="CharacterSheet/nodeCar/car-" to="CharacterSheet" method="alteraCar" binds= [ false ]]
[connection signal="pressed" from="CharacterSheet/nodeCar/car+" to="CharacterSheet" method="alteraCar" binds= [ true ]]
